--- a/style.css
+++ b/style.css
@@ -4,21 +4,24 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+
+.header-block {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+
+.header-block__img {
     width: 100%;
 }
-.aaa .more_inf {
+
+.header-block__button {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header-block { text-align: center;
 }
 }
 .centered-main-page-element {
