--- a/style.css
+++ b/style.css
@@ -5,24 +5,24 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.header-block {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.header-block__img {
+.header-img {
   width: 100%;
 }
 
-.header-block__button {
+.header-button {
   font-family: "fantasy", "cursive";
 }
 
 @media (max-width:768px) {
 
-  .header-block {
+  .header {
     text-align: center;
   }
 
